--- a/searchapp/templates/base.html
+++ b/searchapp/templates/base.html
@@ -34,7 +34,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation">
-              <a href="http://localhost:5601" target="_blank">Kibana Search</a>
+              <a href="/search" target="_blank">Kibana Search</a>
             </li>
             {% if g.user %}
               <li role="presentation">
